This commit adds changes to use kojibuilder in baremetal
This commit also includes the PR 40 from slords to fix issues
with the SSL error from issue #28

Signed-off-by: Jesus Ornelas <ornelas.aguayo.jesus@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,12 @@ koji-hub:
     volumes:
         - /opt/koji:/opt/koji:rw,z
         - /opt/koji-clients:/opt/koji-clients:rw,z
+        - /mnt/koji:/mnt/koji:rw,z
     links:
         - koji-db
+    ports:
+        - "80:80"
+
 
 koji-client:
     build: client
